--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Restaurant page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/scottgball/restaurant-page#readme",
   "devDependencies": {
+    "css-loader": "^6.6.0",
+    "style-loader": "^3.3.1",
     "webpack-cli": "^4.9.2"
   }
 }
